force-app/main/default/objects/Onboarding_Answer__c/Onboarding_Answer__c.object-meta.xml
<CustomObject>
    <label>Onboarding Answer</label>
    <nameField>
        <label>Onboarding Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>