force-app/main/default/objects/Onboarding_Answer__c/fields/Onboarding_Question__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Onboarding Question</label>
    <referenceTo>Onboarding_Question__c</referenceTo>
    <relationshipLabel>Onboarding Answers</relationshipLabel>
    <relationshipName>Onboarding_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>